# async-pynamodb

./: pyproject.toml
.github/workflows/: test.yaml
pynamodb/: attributes.py  exceptions.py  indexes.py  models.py  signals.py  transactions.py
pynamodb/async/: connection.py
pynamodb/asyncio/: batch_get.py  batch_write.py  connection.py  result_iterator.py  table_connection.py  trace.py  transactions.py
pynamodb/asyncio/context/: clients.py  globals.py  stack.py
pynamodb/asyncio/tracer/: dd.py  default.py
pynamodb/connection/: abstracts.py  base.py  skeleton.py  table.py
tests/: test_async_table_connection.py  test_base_connection.py  test_model.py  test_transaction.py
tests/integration/: test_discriminator.py  test_discriminator_range_key.py  test_versioning.py
